--- a/server/package.json
+++ b/server/package.json
@@ -4,10 +4,10 @@
   "description": "robust server for PullMate",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc -p",
     "watch": "tsc -w",
-    "start": "npm run build && nodemon dist/src/server.js",
-    "serve": "nodemon --exec ts-node ./src/server.ts",
+    "start": "cross-env NODE_ENV=production node dist/server.js",
+    "dev": "cross-env NODE_ENV=development nodemon dist/server.js",    
     "test": "npm test",
     "lint": "npx eslint **.js --fix"
   },
@@ -32,11 +32,15 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "pg": "^8.13.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^22.9.0",
+    "@types/pg": "^8.11.10",
+    "cross-env": "^7.0.3",
     "typescript": "^5.6.3"
   }
 }
