--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "build": "tsc -p",
     "watch": "tsc -w",
     "start": "cross-env NODE_ENV=production node dist/server.js",
-    "dev": "cross-env NODE_ENV=development nodemon dist/server.js",    
+    "dev": "cross-env NODE_ENV=development nodemon dist/server.js",
     "test": "npm test",
     "lint": "npx eslint **.js --fix"
   },
@@ -29,6 +29,7 @@
   },
   "homepage": "https://github.com/sahilrohera10/PullMate#readme",
   "dependencies": {
+    "axios": "^1.7.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
