--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "build": "tsc -p",
     "watch": "tsc -w",
     "start": "cross-env NODE_ENV=production node dist/server.js",
-    "dev": "cross-env NODE_ENV=development nodemon dist/server.js",    
+    "dev": "cross-env NODE_ENV=development nodemon dist/server.js",
     "test": "npm test",
     "lint": "npx eslint **.js --fix"
   },
@@ -33,6 +33,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "nodemon": "^3.1.7",
+    "octokit": "^4.0.2",
     "pg": "^8.13.1"
   },
   "devDependencies": {
