--- a/server/package.json
+++ b/server/package.json
@@ -36,7 +36,8 @@
     "joi": "^17.13.3",
     "nodemon": "^3.1.7",
     "octokit": "^4.0.2",
-    "pg": "^8.13.1"
+    "pg": "^8.13.1",
+    "tslib": "^2.8.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
