--- a/server/package.json
+++ b/server/package.json
@@ -37,7 +37,8 @@
     "nodemon": "^3.1.7",
     "octokit": "^4.0.2",
     "pg": "^8.13.1",
-    "tslib": "^2.8.1"
+    "tslib": "^2.8.1",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
