--- a/server/package.json
+++ b/server/package.json
@@ -39,7 +39,7 @@
     "octokit": "^4.0.2",
     "pg": "^8.13.1",
     "tslib": "^2.8.1",
-    "uuid": "^11.0.3"
+    "uuid": "^11.0.3",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
   },
