--- a/server/package.json
+++ b/server/package.json
@@ -30,10 +30,12 @@
   "homepage": "https://github.com/sahilrohera10/PullMate#readme",
   "dependencies": {
     "axios": "^1.7.7",
+    "bullmq": "^5.41.5",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "ioredis": "^5.5.0",
     "joi": "^17.13.3",
     "moment-timezone": "^0.5.46",
     "nodemon": "^3.1.7",
